# C2plus

./: AESFileHandler.cpp  AESFileHandler.h  CommandLineParser.cpp  CommandLineParser.h  Console.cpp  Console.sln  Console.vcxproj  Console.vcxproj.filters  CryptoManager.cpp  CryptoManager.h  EncFileHandler.cpp  EncFileHandler.h  FileHandler.h  HybridFileHandler.cpp  HybridFileHandler.h  KeyGenTool.cpp  KeyGenTool.h  Logger.h  RSAManager.cpp  RSAManager.h  Utils.cpp  Utils.h  git_push.sh
Backup/: Console.rar
Console/x64/Release/: Console.exe.recipe  Console.iobj  Console.ipdb  Console.vcxproj.FileListAbsolute.txt
Console/x64/Release/Console.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Console.lastbuildstate  Console.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
SecureConsoleApp/: CMakeLists.txt  README.md  install.sh
SecureConsoleApp/include/security/: AntiTamper.hpp  AuthManager.hpp  CliParser.hpp  ConfigManager.hpp  ConsoleCommandRegistry.hpp  CryptoEngine.hpp  InputValidator.hpp  MasterKeyProvider.hpp  MemoryGuard.hpp  PrivilegeDrop.hpp  SecureCore.hpp  SecureKeyDerivation.hpp  SecureLogger.hpp  SecureTOTP.hpp  SignedAuditLog.hpp  SilentModeHandler.hpp  SilentToken.hpp  UserDatabase.hpp
SecureConsoleApp/src/: main.cpp
SecureConsoleAppNet/: CMakeLists.txt  README.md  USAGE_AND_CRYPTO_GUIDE.md  install.sh
SecureConsoleAppNet/include/security/: AntiTamper.hpp  AuthManager.hpp  CliParser.hpp  CryptoEngine.hpp  InputValidator.hpp  MasterKeyProvider.hpp  MemoryGuard.hpp  SecureCore.hpp  SecureLogger.hpp  UnixSocketChannel.hpp
SecureConsoleAppNet/src/: test_ipc.cpp
x64/Release/: AT.enc  ATools.enc  AToolsHyB.enc  Atools_NEW.enc  private.pem  private_key.pem  public.pem  public_key.pem
